# html-reader-mode

./: LICENSE  README.md  pyproject.toml  test_html_reader_mode.py
.github/workflows/: build_and_test.yml  release.yml
src/html_reader_mode/: __init__.py  html_reader_mode.py
src/tests/: test_html_reader_mode.py
